Revision history for Perl extension Statistics::Descriptive.

2.8   May 09, 2009

    - Enabled "./Build runtest" and "./Build distruntest" (using Test::Run)
    in the distribution.

    - Fixed incomplete/broken tests in t/descr.t.

2.7   May 03, 2009

    - Converted the distribution to Build.PL and re-organized it to
    put everything under its proper place. Started maintaining it in:
        - http://svn.berlios.de/svnroot/repos/web-cpan/Statistics-Descriptive/

    - Converted t/descr.t to use "use strict;" and "use warnings;".
    
    - Converted t/descr.t to use Test::More.

    - Cleaned up the "use" statement of lib/Statistics/Descriptive.pm.

    - Added more explicit dependencies (core, though) to Build.PL. 

    - Fixed RT bug #34999: freq distribution generated too many bins.
        - https://rt.cpan.org/Ticket/Display.html?id=34999

    - Added some keywords and resources to the META.yml, using Build.PL's
    meta_merge.

    - Fixed https://rt.cpan.org/Ticket/Display.html?id=32183 
        - more authoritative (and non-broken) link to the RFC.

    - Applied the patch in https://rt.cpan.org/Ticket/Display.html?id=9160 
        - {{#9160: Variance and Standard Deviation use costly pseudo-variance, 
        instead of computing real variance}}.

2.6   October 10, 2002
    - Fixed caching in trimmed mean and modified code to allow trimming
	  0% from upper bound.  Formerly if 0 was requested then it used the
	  lower bound!

	- POD format patch from ddunlap

2.5   Wednesday, May 12 1999
	- Forgot to document change in v2.4, which included fixing
	  percentile so that it worked right and added to the test
	  harness.
	- Modified frequency_distribution so that specific bins could
	  be passed in.  Fixed caching so that it actually works
	  (it only used to get stuck returning the result of the
	  first call).
	- Turned off caching for least_squares_fit because there's no
	  way to generate a unique key for memorization.

2.3   Thursday Nov 12 1998